# footsteps

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: .test-windows.yml.swp  .test.yml.swp  test-integration-via-icon.yml  test-linux-conda.yml  test-linux-venv.yml  test-windows-venv  test-windows-venv.yml  test-windows.yml  test.yml
footsteps/: __init__.py  footsteps.py
src/footsteps/: __init__.py  footsteps.py
test/: example_custom_root.py  example_program.py  test.py
