[metadata]
name = footsteps
version = 0.1.3
author = Hastings Greer
author_email = footsteps@hgreer.com
description = a minimal experiment logging package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HastingsGreer/footsteps
project_urls =
    Bug Tracker = https://github.com/HastingsGreer/footsteps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src

